test/visibility/private/uses/accessSecondary.good
accessSecondary.chpl:8: error: unresolved call 'Foo.other()'
accessSecondary.chpl:8: note: because no functions named other found in scope
